[gd_scene load_steps=5 format=3 uid="uid://b5dw2jqg73xtk"]

[ext_resource type="Script" uid="uid://d0w5wvh6057uw" path="res://Entities/Ghosts/ghost_body.gd" id="1_b0ltk"]

[sub_resource type="Animation" id="Animation_b0ltk"]
resource_name = "fright"
loop_mode = 2
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.745098, 0.745098, 0.745098, 1), Color(0, 0, 1, 1)]
}

[sub_resource type="Animation" id="Animation_bvgyd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.745098, 0.745098, 0.745098, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yiq8c"]
_data = {
&"RESET": SubResource("Animation_bvgyd"),
&"fright": SubResource("Animation_b0ltk")
}

[node name="GhostBody" type="Polygon2D"]
color = Color(0.745098, 0.745098, 0.745098, 1)
polygon = PackedVector2Array(-12, -12, 12, -12, 12, 12, 8, 8, 4, 12, 0, 8, -4, 12, -8, 8, -12, 12)
script = ExtResource("1_b0ltk")

[node name="LeftEye" type="Polygon2D" parent="."]
polygon = PackedVector2Array(-8, -4, -8, 0, -4, 0, -4, -4, -8, -8)

[node name="RightEye" type="Polygon2D" parent="."]
polygon = PackedVector2Array(4, 0, 4, -4, 8, -8, 8, -4, 8, 0)

[node name="Mouth" type="Polygon2D" parent="."]
position = Vector2(0, -1)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-4, 7, -2, 5, 0, 7, 2, 5, 4, 7, 8, 3, 6, 3, 4, 5, 2, 3, 0, 5, -2, 3, -4, 5, -6, 3, -8, 3)

[node name="RightPupil" type="Polygon2D" parent="."]
position = Vector2(-2, -2)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-6, -2, -6, 0, -4, 0, -4, -2)

[node name="LeftPupil" type="Polygon2D" parent="."]
position = Vector2(10, -2)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-6, -2, -6, 0, -4, 0, -4, -2)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_yiq8c")
}
speed_scale = 2.0
